# stream-tools

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  jira.yml  release-please.yml
docs/: jira.md
scripts/: docs  export-yt-credentials  upload-batch
src/stream_tools/: AGENTS.md  __init__.py  client.py  exceptions.py
src/stream_tools/auth/: __init__.py  credentials.py  oauth.py
src/stream_tools/models/: __init__.py  broadcast.py  chat.py  common.py  stream.py  video.py
src/stream_tools/services/: __init__.py  bans.py  base.py  broadcasts.py  channels.py  chat.py  moderators.py  setup.py  streams.py  videos.py
src/stream_tools_cli/: AGENTS.md  __init__.py  app.py  azuracast.py  formatting.py  notifications.py  state.py
src/stream_tools_cli/commands/: __init__.py  auth.py  azuracast.py  bans.py  broadcasts.py  channels.py  chat.py  moderators.py  setup.py  streams.py  videos.py
src/stream_tools_mcp/: __init__.py  server.py
tests/: test_models.py  test_services.py  test_upload_batch.py
