[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-tools"
version = "0.1.0"
description = "YouTube Live Stream management tool"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth>=2.23.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pdoc>=14.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
yt = "stream_tools_cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stream_tools", "src/stream_tools_cli"]

[tool.ruff]
src = ["src"]
line-length = 100
